tests/baselines/reference/asyncArrowFunction3_es2017.errors.txt
tests/cases/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction3_es2017.ts(1,20): error TS2372: Parameter 'await' cannot reference itself.


==== tests/cases/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction3_es2017.ts (1 errors) ====
    function f(await = await) {
                       ~~~~~
!!! error TS2372: Parameter 'await' cannot reference itself.
    }